# atomet

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: build.yml
buildscripts/: build_local.sh  docker_build.sh  drivers_build.sh  imgproc_build.sh  isp_build.sh  linux_prebuild_hook.sh  make_initramfs.sh  post_build.sh  post_image.sh  rust_build.sh  web_build.sh
configs/: atomet_defconfig  busybox-init.config  kernel.config
crates/atometd/: Cargo.toml
crates/atometd/src/: ae_ctrl.rs  config.rs  daynight.rs  detection.rs  font.rs  gpio.rs  isp.rs  luma.rs  main.rs  muxer.rs  osd.rs  record.rs  solve.rs  stream.rs  system.rs  watchdog.rs  web.rs  webhook.rs  websocket.rs
crates/imgproc/: Cargo.toml  build.rs  mxu2.h
crates/imgproc/native/: imgproc.c  imgproc.h  stars.c
crates/imgproc/src/: lib.rs  main.rs
crates/isvp-sys/: Cargo.toml  build.rs  wrapper.h
crates/isvp-sys/src/: lib.rs  wrapper.rs
crates/rtsp/: Cargo.toml
crates/solver/: Cargo.toml
crates/solver/src/: extractor.rs  gen.rs  lib.rs
custompackages/: Config.in
custompackages/package/: Config.in
custompackages/package/atbm_wifi/: Config.in  atbm_wifi.mk
drivers/tx-isp-t31/: atomet.c  atomet.h
initramfs_skeleton/: init
overlay_rootfs/etc/: go2rtc.yaml  wpa_supplicant.conf
patches/kernel/: linux-compiler-gcc.patch  linux-makefile.patch  linux-soct31-clk-cgu.patch  linux-v4l2-hevc.patch
tx-isp-t31/: Makefile  atomet.c  tx-isp-module.c
web/: package-lock.json  package.json  vite.config.ts
web/src/: app.html
web/src/lib/: player.ts  ws.ts  (+1 more)
(+24 files in other folders)
