[package]
name = "atometd"
version = "0.1.0"
edition = "2024"

[dependencies]
isvp-sys = { path = "../isvp-sys" }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = "0.4"
log = "0.4"
simplelog = "0.12"
libc = "0.2"
arc-swap = "1.8"
imgproc = { path = "../imgproc" }
solver = { path = "../solver" }
ureq = { version = "3", default-features = false, features = ["native-tls"] }
base64ct = { version = "1", features = ["alloc"] }
